--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,8 +9,9 @@ body {
     font-family: 'Space Mono', 'Courier New', Courier, monospace, system-ui;
     margin: 3rem auto;
     background-color: rgb(24,24,24);
-    border-radius: 6px;
+    border-radius: 1rem;
     font-weight: 400;
+    box-shadow: 0px 0px 10px #ff8c9f;
     color: antiquewhite;
     padding: 2rem 3rem;
 }
