--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,7 @@ html {
 }
 
 body {
-    max-width: 30rem;
+    max-width: min(30rem, 90vw);
     font-family: 'Space Mono', 'Courier New', Courier, monospace, system-ui;
     margin: 3rem auto;
     background-color: rgb(24,24,24);
@@ -13,7 +13,7 @@ body {
     font-weight: 400;
     box-shadow: 0px 0px 10px #ff8c9f;
     color: antiquewhite;
-    padding: 2rem 3rem;
+    padding: 1.5rem 2rem;
 }
 
 h1 {
