--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,19 +1,41 @@
 @import url('https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 
+@keyframes blur-in {
+    0% {
+        filter: blur(1rem) saturate(0%) opacity(0.7);
+        transform-origin: center;
+        transform: scale(0.9);
+    }
+    25% {
+        transform: scale(1);
+        filter: blur(0.85rem) saturate(15%) opacity(0.8);
+    }
+    50% {
+        filter: blur(0.5rem) saturate(50%) opacity(0.9);
+    }
+    100% {
+        filter: blur(0) saturate(100%) opacity(1);
+    }
+}
+
 html {
     background-color: rgb(17, 17, 17);
+    padding: 0 2rem;
 }
 
 body {
     max-width: min(30rem, 90vw);
     font-family: 'Space Mono', 'Courier New', Courier, monospace, system-ui;
-    margin: 3rem auto;
+    margin: 2rem auto;
     background-color: rgb(24,24,24);
     border-radius: 1rem;
     font-weight: 400;
     box-shadow: 0px 0px 10px #ff8c9f;
     color: antiquewhite;
     padding: 1.5rem 2rem;
+    animation-name: blur-in;
+    animation-duration: 0.5s;
+    animation-timing-function: ease-in-out;
 }
 
 h1 {
